--- a/src/components/title/style.scss
+++ b/src/components/title/style.scss
@@ -1,7 +1,9 @@
-.title-logo {
+.title {
+    display: flex;
+    justify-content: center;
     a, span {
         color: #323232;
-        font-size: 20px;
+        font-size: 24px;
         font-weight: 700;
     }
 }
